--- a/src/ui/components/organisms/setList/set-list.css
+++ b/src/ui/components/organisms/setList/set-list.css
@@ -9,8 +9,7 @@ html {
 
 .set-table {
   width: 100%;
-  display: grid;
-  margin-bottom: 2rem; }
+  display: grid; }
   .set-table .row {
     display: grid;
     grid-template-columns: 15% 25% 25% 35%; }
@@ -26,7 +25,9 @@ html {
     background-color: #d6d6d6; }
   .set-table .cell {
     padding: 1rem 0.75rem; }
-    .set-table .cell.change span:nth-of-type(1) {
-      color: red; }
-    .set-table .cell.change span:nth-of-type(2) {
-      margin-left: 2rem; }
+    .set-table .cell.change span {
+      cursor: pointer; }
+      .set-table .cell.change span:nth-of-type(1) {
+        color: red; }
+      .set-table .cell.change span:nth-of-type(2) {
+        margin-left: 2rem; }
