--- a/src/ui/views/SetCounter/set-counter.css
+++ b/src/ui/views/SetCounter/set-counter.css
@@ -21,4 +21,6 @@ html {
     font: 400 1.6rem/1.4 sans-serif;
     background-color: #2e90ff;
     color: #fff;
-    text-align: center; }
+    text-align: center;
+    border-radius: 0;
+    font-weight: 700; }
