--- a/src/ui/views/SetCounter/set-counter.scss
+++ b/src/ui/views/SetCounter/set-counter.scss
@@ -20,5 +20,7 @@
         background-color: $gains_blue_1;
         color: $white;
         text-align: center;
+        border-radius: 0;
+        font-weight: 700;
     }
 }
