feat: add styling to login page

--- a/src/ui/styling/variables.scss
+++ b/src/ui/styling/variables.scss
@@ -1,6 +1,7 @@
 $gains_blue_1: rgb(46, 144, 255);
 $gains_blue_2: rgb(85, 162, 250);
 $gains_blue_3: rgb(140, 194, 255);
+$gains_blue_4: rgb(218, 235, 255);
 
 $black: #000;
 $grey_1: rgb(43, 43, 43);
