--- a/src/ui/views/SetCounter/set-counter.css
+++ b/src/ui/views/SetCounter/set-counter.css
@@ -24,3 +24,10 @@ html {
     text-align: center;
     border-radius: 0;
     font-weight: 700; }
+  .set-counter .save-set {
+    position: fixed;
+    bottom: 5rem;
+    left: 1rem;
+    width: calc(100% - 2rem);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    border-radius: 4rem; }
