--- a/src/ui/views/SetCounter/set-counter.scss
+++ b/src/ui/views/SetCounter/set-counter.scss
@@ -23,4 +23,13 @@
         border-radius: 0;
         font-weight: 700;
     }
+
+    .save-set {
+        position: fixed;
+        bottom: 5rem;
+        left: 1rem;
+        width: calc(100% - 2rem);
+        box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+        border-radius: 4rem;
+    }
 }
